Fix: revert carousel spacing and fix nav buttons alignment

--- a/components/AllTransactionsCarousel/AllTransactionsCarousel.module.scss
+++ b/components/AllTransactionsCarousel/AllTransactionsCarousel.module.scss
@@ -7,14 +7,17 @@
   align-self: stretch;
   & > * {
     height: 100%;
+    padding: $gutter;
   }
 }
 
 .navigationColumn {
   display: flex;
   justify-content: flex-start;
-  margin-top: $gutter * 1.5;
+  margin-top: $gutter * .5;
   margin-bottom: 0;
+  padding-left: $gutter;
+  padding-right: $gutter;
   @include breakpoint-up(sm) {
     justify-content: flex-end;
     margin-bottom: $paragraphs-margin-bottom;
